--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bcrypt": "^5.1.1",
+    "cookie": "^1.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "next": "14.2.14",
     "react": "^18",
