--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@shadcn/ui": "^0.0.4",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.5",
     "cookie": "^1.0.1",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "next": "14.2.14",
+    "nodemon": "^3.1.7",
     "react": "^18",
+    "react-bootstrap": "^2.10.5",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "22.7.9",
