--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.27.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "22.7.9",
