--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "leaflet": "^1.9.4",
     "mysql2": "^3.11.3",
     "next": "14.2.14",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
