--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
     "sharp": "^0.33.5",
     "styled-components": "^6.1.13"
