--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.5",
     "cookie": "^1.0.1",
     "dotenv": "^16.4.5",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mysql2": "^3.11.3",
